ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: ""
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    nginx.ingress.kubernetes.io/cors-allow-methods: "PUT, GET, POST, OPTIONS, DELETE"
    nginx.ingress.kubernetes.io/cors-allow-headers: ""
    nginx.ingress.kubernetes.io/forwarded-for-headers: "X_Real_IP"
    nginx.ingress.kubernetes.io/forwarded-proto-header: "X-Forwarded_Proto"
    nginx.ingress.kubernetes.io/custom-response-headers:
    nginx.ingress.kubernetes.io/content-type-sniffing: "false"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  tls:
  - hosts:
    - your_hostname.com
    secretName: keycloak-secret-tls
  rules:
  - host: your_hostname.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: keycloak
            port:
              number: 8080
